--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,195 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nate Donato</title>
   <!-- <link rel="stylesheet" href="style.css"> -->
+  <style>
+    @font-face {
+      font-family: LatinModernMono;
+      src: url("../assets/fonts/lmmono10-regular.otf") format("opentype");
+      font-weight: 400;
+      text-rendering: optimizeLegibility;
+    }
+
+    *,
+    *::before,
+    *::after {
+      box-sizing: border-box;
+    }
+
+    * {
+      /* margin: 0; */
+    }
+
+    html,
+    body {
+      height: 100%;
+    }
+
+    img,
+    picture,
+    video,
+    canvas,
+    svg {
+      display: block;
+      max-width: 100%;
+    }
+
+    input,
+    button,
+    textarea,
+    select {
+      font: inherit;
+    }
+
+    p,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      overflow-wrap: break-word;
+    }
+
+    #root,
+    #__next {
+      isolation: isolate;
+    }
+
+
+    .main-container {
+      min-height: 95%;
+      display: flex;
+      align-items: center;
+      opacity: 0;
+      animation: fadeIn 2s ease forwards;
+    }
+
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
+    }
+
+
+    html {
+      background: black;
+      color: white;
+      font-family: LatinModernMono, "Courier New", Courier, monospace;
+
+    }
+
+    .container {
+      margin: 0 auto;
+      display: flex;
+      max-width: 1000px;
+    }
+
+    a,
+    a.visited {
+      color: inherit;
+      text-decoration: none;
+      transition: all 1s ease;
+    }
+
+    span{
+      transition: color 1s ease;
+    }
+
+    /* spinner */
+    #spinner {
+      margin: 200px;
+      position: relative;
+      animation: spin 50s linear infinite;
+      transform-style: preserve-3d;
+    }
+
+    #spinner>div {
+      position: absolute;
+      transform-style: preserve-3d;
+      /* font-size: 12px; */
+    }
+
+    #spinner>div>div {
+      animation: un-spin 50s linear infinite;
+    }
+
+    @keyframes un-spin {
+      from {
+        transform: rotateY(1.001turn);
+      }
+
+      to {
+        transform: rotateY(0.001turn);
+      }
+    }
+
+    @keyframes spin {
+      from {
+        transform: rotateX(-0.05turn) rotateY(0turn);
+      }
+
+      to {
+        transform: rotateX(-0.05turn) rotateY(1turn);
+      }
+    }
+
+    .circle {
+      transition: background 2s ease;
+      transform-style: preserve-3d;
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      border-radius: 100%;
+      background: rgba(255, 0, 0, 0.9);
+    }
+
+    span {
+      cursor: pointer;
+    }
+
+    span:hover>.popup {
+      display: block;
+      visibility: visible;
+    }
+
+    .popup {
+      visibility: hidden;
+      position: fixed;
+      top: 0;
+      left: 0;
+      border: 2px solid rgb(55, 55, 55);
+      background: white;
+      padding: 2px;
+      max-width: 80vw;
+      max-height: 80vh;
+      pointer-events: none;
+    }
+
+    @media (max-width: 1000px) {
+      .container {
+        flex-direction: column;
+        padding: 10px;
+      }
+
+      #spinner {
+        margin: 120px auto;
+        font-size: 16px !important;
+      }
+
+      .circle,
+      .circle-container {
+        width: 210px !important;
+        height: 210px !important;
+      }
+
+    }
+  </style>
+
 </head>
 
 <body>
@@ -229,7 +418,7 @@
 
       </div>
       <div class="content">
-        <p>I&#39;m Nate Donato. I live in Oakland CA and root for the Athletics. I&#39;m bad at picking favorites, but
+        <p>I&#39;m Nate Donato. I live in Oakland CA and root for the <span title="LETS GO OAKLAND">Athletics<img class="popup" src="../assets/about/as.JPG" alt="As"></span>. I&#39;m bad at picking favorites, but
           my
           favorite color has traditionally been green. I like coffee, dumplings, bonsai trees, and <a
             href="https://natedonato.com/rain">rainy days</a>. </p>
@@ -243,20 +432,21 @@
             href="https://natedonato.com/cv">CV</a> page.</p>
         <p>Prior to dev work, I did stints as a subsitute teacher (K-12), an SAT test prep tutor, and a grocery clerk at
           the
-          <a href="https://www.instagram.com/stargrocerberkeley/">best grocery store ever</a>. I graduated from UC Santa
-          Cruz
-          with a BA in Literature, which makes me a Banana Slug.
+          <a href="https://www.instagram.com/stargrocerberkeley/">best grocery store ever</a>. I <span title="Shoutout to professors Chris Connery and Rob Wilson">graduated from UC Santa
+          Cruz<img class="popup" src="../assets/about/ucsc.gif" alt="diploma"></span>
+          with a BA in Literature, which makes me a <span title="slug life 4 life">banana slug<img class="popup" src="../assets/about/slug.jpeg" alt="banana slug"></span>.
         </p>
         <p>Outside of work I&#39;m always up to different stuff like making <a
             href="https://natedonato.com/games">games</a>
           and
           <a href="https://natedonato.com/generative">generative artwork</a> for fun, writing <a
-            href="https://natedonato.com/zines">zines</a>, drawing animated gifs, taking photos on my film cameras,
+            href="https://natedonato.com/zines">zines</a>, drawing animated gifs, taking photos on my <span title="Minolta x370">film camera<img class="popup" src="../assets/about/minolta.gif" alt=""></span>,
           studying
           Japanese, playing <a href="https://lichess.org/@/naet">Chess</a> or <a
             href="https://online-go.com/player/787153/">Go</a>, making music, enjoying rainy days, reading the Sunday
           newspaper,
-          or spending time with my family. I&#39;m a new father of a wonderful baby boy named after my late grandfather.
+          or spending time with my <span title="Dom, LOML">beautiful partner <img class="popup" src="../assets/about/dom.gif
+            " alt="Dom"></span> and new baby boy.
         </p>
         <p>If you&#39;re interested in hiring me please reach out via <a
             href="https://www.linkedin.com/in/natedonato/">LinkedIn</a>. If you&#39;re interested in friendship please
@@ -268,10 +458,53 @@
     </div>
   </div>
   <script>
-    let links = document.querySelectorAll("a");
-    let circle = document.querySelector('.circle');
-    setTimeout(() => setInterval(hueShiftLinks, 5000), 0000);
+    // give random positions to images
+    let imgs = document.querySelectorAll('.popup')
 
+    function positionImage(img){
+      console.log(img);
+      let w = window.innerWidth;
+      let h = window.innerHeight;
+      let padding = 15;
+
+      let imageW = img.offsetWidth;
+      let imageH = img.offsetHeight * 1.1;
+      let bounds = [w - imageW - 2*padding, h - imageH - 2*padding];
+
+      img.style.left = Math.floor(Math.random() * bounds[0] + padding) + "px";
+      img.style.top = Math.floor(Math.random() * bounds[1] + padding) + "px";
+        
+    }
+
+    function randomPosition() {
+
+
+      for (const img of imgs) {
+        img.onload = () => positionImage(img);
+        positionImage(img);
+      };
+    }
+
+    randomPosition();
+
+    let debounce;
+    let initialWidth = window.innerWidth;
+    let initialHeight = window.innerHeight;
+    window.addEventListener("resize", (e) => {
+
+      if(window.innerWidth !== initialWidth || Math.abs(initialHeight - window.innerHeight) > 300){
+        clearTimeout(debounce);
+        debounce = setTimeout(randomPosition, 200);
+      }
+    })
+
+    // color links
+    let links = document.querySelectorAll("a, span");
+    // let spans = document.querySelectorAll()
+    let circle = document.querySelector('.circle');
+    
+    setTimeout(() => hueShiftLinks(), 3000);
+    setTimeout(() => setInterval(hueShiftLinks, 5000), 3000);
     function hueShiftLinks() {
       let randomHue = Math.floor(Math.random() * 360);
       let randomOffset = 5 + Math.floor(Math.random() * 40);
@@ -284,160 +517,7 @@
       }
     }
   </script>
-  <style>
-    *,
-    *::before,
-    *::after {
-      box-sizing: border-box;
-    }
 
-    * {
-      /* margin: 0; */
-    }
-
-    html,
-    body {
-      height: 100%;
-    }
-
-    img,
-    picture,
-    video,
-    canvas,
-    svg {
-      display: block;
-      max-width: 100%;
-    }
-
-    input,
-    button,
-    textarea,
-    select {
-      font: inherit;
-    }
-
-    p,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      overflow-wrap: break-word;
-    }
-
-    #root,
-    #__next {
-      isolation: isolate;
-    }
-
-
-    .main-container {
-      min-height: 95%;
-      display: flex;
-      align-items: center;
-      opacity: 0;
-      animation: fadeIn 2s ease forwards;
-    }
-
-
-    @keyframes fadeIn {
-      from{
-        opacity: 0;
-      }
-      to{
-        opacity: 1;
-      }
-    }
-
-
-    html {
-      background: black;
-      color: white;
-      font-family: LatinModernMono, "Courier New", Courier, monospace;
-
-    }
-
-    .container {
-      margin: 0 auto;
-      display: flex;
-      max-width: 1000px;
-    }
-
-    a,
-    a.visited {
-      color: inherit;
-      text-decoration: none;
-      transition: all 1s ease;
-    }
-
-    /* spinner */
-    #spinner {
-      margin: 200px;
-      position: relative;
-      animation: spin 50s linear infinite;
-      transform-style: preserve-3d;
-    }
-
-    #spinner>div {
-      position: absolute;
-      transform-style: preserve-3d;
-      /* font-size: 12px; */
-    }
-
-    #spinner>div>div {
-      animation: un-spin 50s linear infinite;
-    }
-
-    @keyframes un-spin {
-      from {
-        transform: rotateY(0turn);
-      }
-
-      to {
-        transform: rotateY(-1turn);
-      }
-    }
-
-    @keyframes spin {
-      from {
-        transform: rotateX(-0.05turn) rotateY(0turn);
-      }
-
-      to {
-        transform: rotateX(-0.05turn) rotateY(1turn);
-      }
-    }
-
-    .circle {
-      transition: background 2s ease;
-      transform-style: preserve-3d;
-      position: absolute;
-      width: 300px;
-      height: 300px;
-      border-radius: 100%;
-      background: rgba(255, 0, 0, 0.9);
-    }
-
-    @media (max-width: 1000px) {
-      .container {
-        flex-direction: column;
-        padding: 10px;
-      }
-
-      #spinner {
-        margin: 120px auto;
-        font-size: 16px !important;
-      }
-
-      .circle,
-      .circle-container {
-        width: 210px !important;
-        height: 210px !important;
-      }
-
-    }
-  </style>
 </body>
 
 </html>
