--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nate Donato</title>
+  <meta name="description" content="Nate Donato - Senior Developer @ Mojave.  I make websites and this is one of them.">
+  <link rel="preload" href="./assets/fonts/lmmono10-regular.otf" as="font" type="font/otf" crossorigin>
   <link rel="stylesheet" href="style.css">
 </head>
 
