--- a/about/index.html
+++ b/about/index.html
@@ -459,7 +459,8 @@
         <p>If you&#39;re interested in hiring me please reach out via <a
             href="https://www.linkedin.com/in/natedonato/">LinkedIn</a>. If you&#39;re interested in friendship please
           please
-          reach out via <span title="Pigeon post being preferred">other channels<img class="popup" src="../assets/about/pigeon.gif" alt="pigeon"></span>.</p>
+          reach out via <span title="Pigeon post being preferred">other channels<img class="popup"
+              src="../assets/about/pigeon.gif" alt="pigeon"></span>.</p>
         <p>Thanks for stopping by my little web corner! Hope you enjoy the stay.</p>
         <p><a href="../">&lt;== Go back home</a></p>
       </div>
