--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       </div>
       <div class="col colB">
         <ul class="main-links">
-          <li><a href="./about">About</a></li>
+          <li><a href="./about/">About</a></li>
           <li><a href="https://www.natedonato.com/cv/">CV</a></li>
           <li><a href="https://www.natedonato.com/projects/">Web projects</a></li>
-          <li><a href="./games">Games</a></li>
+          <li><a href="./games/">Games</a></li>
           <li><a href="https://www.natedonato.com/generative/">GenArt</a></li>
           <!-- <li><a href="./blog">Blog</a></li> -->
-          <li><a href="https://www.natedonato.com/zines/">Zines</a></li>
+          <li><a href="./zines/">Zines</a></li>
           <li class="social-container"><button>Social links</button>
             <ul class="social-links">
               <li><a href="https://codepen.io/natedonato/">CodePen</a></li>
