add old cv, update games and projects

--- a/games/index.html
+++ b/games/index.html
@@ -22,21 +22,21 @@
       <div class="col colB">
         <ul class="main-links">
           <li class="yr">
-            <h3>2022:</h3>
+            <h2>2022:</h2>
           </li>
           <li><a href="https://squigglegolf.com">SquiggleGolf</a> -
             A 2d minigolf platformer game. New courses algorithmically generated every day! <br><small>HTML Canvas,
-              Matter.JS, Rough.js</small>
+              Matter.js, Rough.js</small>
           </li>
           <li class="yr">
-            <h3>2019:</h3>
+            <h2>2019:</h2>
           </li>
           <li><a href="https://www.natedonato.com/landslideJS/">Landslide</a> -
-            A climb to the top scramble platformer with high score leaderboard <br><small>Custom JS physics, Node/Express
+            A climb to the top scramble platformer with a global high score leaderboard.<br><small>Custom JS physics, Node/Express
               API, NoSQL Mongodb Atlas</small>
           </li>
           <li style="padding-bottom: 0px;"><a href="https://www.natedonato.com/dresscat/cat.html">DressCat</a> - A
-            simple but cute dress the cat toy. My first ever game <br><small>HTML CSS JS, Photoshop</small></li>
+            simple but cute dress the cat toy. My first ever game project.<br><small>HTML, CSS, JS, Photoshop</small></li>
         </ul>
       </div>
     </section>
