--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Nate</title>
+  <meta name="description" content="Nate Donato's about page.">
   <link rel="preload" href="../assets/fonts/lmmono10-regular.otf" as="font" type="font/otf" crossorigin>
-  <!-- <link rel="stylesheet" href="style.css"> -->
   <style>
     @font-face {
       font-family: LatinModernMono;
@@ -421,7 +421,7 @@
 
       </div>
       <div class="content">
-        <p>I&#39;m Nate Donato. I live in Oakland CA and root for the <span title="LETS GO OAKLAND">Athletics<img
+        <p>I'm <span title="Yep, thats me">Nate Donato<img class="popup" src="../assets/about/nate.jpg" alt="Nate Donato"></span>. I live in Oakland CA and root for the <span title="LETS GO OAKLAND">Athletics<img
               class="popup" src="../assets/about/as.JPG" alt="As"></span>. I&#39;m bad at picking favorites, but
           my
           favorite color has traditionally been green. I like coffee, dumplings, bonsai trees, and <a
@@ -438,7 +438,8 @@
           the
           <a href="https://www.instagram.com/stargrocerberkeley/">best grocery store ever</a>. I <span
             title="Shoutout to professors Chris Connery and Rob Wilson">graduated from UC Santa
-            Cruz<img class="popup" src="../assets/about/ucsc.gif" alt="diploma"></span>
+            Cruz<img class="popup" src="../assets/about/ucsc.gif" alt="diploma">
+          </span>
           with a BA in Literature, which makes me a <span title="slug life 4 life">banana slug<img class="popup"
               src="../assets/about/slug.jpeg" alt="banana slug"></span>.
         </p>
