--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
         <ul class="main-links">
           <li><a href="./about/">About</a></li>
           <li><a href="https://www.natedonato.com/cv/">CV</a></li>
-          <li><a href="https://www.natedonato.com/projects/">Web projects</a></li>
+          <li><a href="./projects/">Web projects</a></li>
           <li><a href="./games/">Games</a></li>
           <li><a href="https://www.natedonato.com/generative/">GenArt</a></li>
           <!-- <li><a href="./blog">Blog</a></li> -->
           <li><a href="./zines/">Zines</a></li>
           <li class="social-container"><button>Social links</button>
             <ul class="social-links">
-              <li><a href="https://codepen.io/natedonato/">CodePen</a></li>
-              <li><a href="https://github.com/natedonato/">GitHub</a></li>
-              <li><a href="https://www.linkedin.com/in/natedonato/">LinkedIn</a></li>
+              <li><a target="_blank" href="https://codepen.io/natedonato/">CodePen</a></li>
+              <li><a target="_blank" href="https://github.com/natedonato/">GitHub</a></li>
+              <li><a target="_blank" href="https://www.linkedin.com/in/natedonato/">LinkedIn</a></li>
+              <li><a target="_blank" href="https://objkt.com/profile/natedonato/collections/">Objkt</a></li>
+              <li><a target="_blank" href="https://twitter.com/natebot9000">Twitter</a></li>
             </ul>
           </li>
         </ul>
@@ -45,7 +47,7 @@
 
   <script>
     let links = document.querySelectorAll("a");
-    setTimeout(() => setInterval(hueShiftLinks, 3000), 2000);
+    setTimeout(() => setInterval(hueShiftLinks, 3000), 1000);
 
     function hueShiftLinks() {
       let randomHue = Math.floor(Math.random() * 360);
