--- a/projects/index.html
+++ b/projects/index.html
@@ -174,7 +174,7 @@
     </div>
     <div class="project-list">
       <h2>Games</h2>
-      <p>Check my <a href="https://www.natedonato.com/generative/">games page</a> to play some web games I've made.</p>
+      <p>Check my <a href="https://www.natedonato.com/games/">games page</a> to play some web games I've made.</p>
       <h2>Generative Art</h2>
       <p>Visit my <a href="https://www.natedonato.com/generative/">generative art page</a> to see some of my creative
         coding
