add antonio to about page

--- a/about/index.html
+++ b/about/index.html
@@ -469,7 +469,7 @@
             Go (囲碁)</a>, making music, enjoying rainy days, reading the Sunday
           newspaper,
           or spending time with my <span tabindex="0" title="Dom, LOML">beautiful partner<img class="popup" src="../assets/about/dom.gif
-            " alt="Dom"></span> and new baby boy.
+            " alt="Dom"></span> and our <span tabindex="0" title="Baby Antonio!!">beautiful new baby boy<img class="popup" src="../assets/about/antonio.gif" alt="Antonio"></span>.
         </p>
         <p>If you&#39;re interested in hiring me please reach out via <a
             href="https://www.linkedin.com/in/natedonato/">LinkedIn</a>. If you&#39;re interested in friendship please
